[package]
name = "muenc"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/000hen/muenc"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
openssl = { version = "0.10.75", features = ["vendored"] }
rpassword = "7.4.0"
thiserror = "2.0.17"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
