[package]
name = "muenc"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/000hen/muenc"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
openssl = { version = "0.10.81", features = ["vendored"] }
rpassword = "7.5.4"
thiserror = "2.0.18"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
